lustrefs-exporter/src/snapshots/lustrefs_exporter__routes__tests__lnet_health_metrics.snap
---
source: lustrefs-exporter/src/routes.rs
expression: output
---
# HELP lustre_send_count_total Total number of messages that have been sent.
# TYPE lustre_send_count_total counter
lustre_send_count_total{nid="0@lo"} 51507
lustre_send_count_total{nid="172.16.14.1@tcp"} 525381
lustre_send_count_total{nid="172.16.14.2@tcp"} 520788
# HELP lustre_receive_count_total Total number of messages that have been received.
# TYPE lustre_receive_count_total counter
lustre_receive_count_total{nid="0@lo"} 51421
lustre_receive_count_total{nid="172.16.14.1@tcp"} 525340
lustre_receive_count_total{nid="172.16.14.2@tcp"} 520745
# HELP lustre_drop_count_total Total number of messages that have been dropped.
# TYPE lustre_drop_count_total counter
lustre_drop_count_total{nid="0@lo"} 86
lustre_drop_count_total{nid="172.16.14.1@tcp"} 21
lustre_drop_count_total{nid="172.16.14.2@tcp"} 1
# HELP lustre_health_value The health value of each LNet network interface.
# TYPE lustre_health_value gauge
lustre_health_value{nid="0@lo"} 1000
lustre_health_value{nid="172.16.14.1@tcp"} 1000
lustre_health_value{nid="172.16.14.2@tcp"} 0
# HELP lustre_health_sensitivity Lustre LNet health sensitivity.
# TYPE lustre_health_sensitivity gauge
lustre_health_sensitivity{} 100
# EOF
