lustrefs-exporter/src/snapshots/lustrefs_exporter__routes__tests__lustre=false&lnet=false&lnet_stats=true.snap
---
source: lustrefs-exporter/src/routes.rs
expression: response.try_into_string().await
---
# HELP lustre_send_bytes_total Total number of bytes that have been sent.
# TYPE lustre_send_bytes_total counter
lustre_send_bytes_total{} 261865376
# HELP lustre_receive_bytes_total Total number of bytes that have been received.
# TYPE lustre_receive_bytes_total counter
lustre_receive_bytes_total{} 254091008
# HELP lustre_drop_bytes_total Total number of bytes that have been dropped.
# TYPE lustre_drop_bytes_total counter
lustre_drop_bytes_total{} 4832
# EOF
