lustrefs-exporter/src/snapshots/lustrefs_exporter__routes__tests__metrics_endpoint_is_idempotent2.snap
---
source: lustrefs-exporter/src/routes.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---

