lustrefs-exporter/src/snapshots/lustrefs_exporter__routes__tests__net_show_output_with_mock.snap
---
source: lustrefs-exporter/src/routes.rs
expression: "String::from_utf8(output.stdout)?"
---
net:
    - net type: lo
      local NI(s):
        - nid: 0@lo
          status: up
          statistics:
              send_count: 180076
              recv_count: 180072
              drop_count: 4
          sent_stats:
              put: 180076
              get: 0
              reply: 0
              ack: 0
              hello: 0
          received_stats:
              put: 180063
              get: 0
              reply: 0
              ack: 9
              hello: 0
          dropped_stats:
              put: 4
              get: 0
              reply: 0
              ack: 0
              hello: 0
          health stats:
              fatal_error: 0
              health value: 1000
              interrupts: 0
              dropped: 0
              aborted: 0
              no route: 0
              timeouts: 0
              error: 0
          tunables:
              peer_timeout: 0
              peer_credits: 0
              peer_buffer_credits: 0
              credits: 0
          lnd tunables:
          dev cpt: 0
          CPT: "[0,1,2,3,4]"
    - net type: tcp
      local NI(s):
        - nid: 172.16.0.24@tcp
          status: up
          interfaces:
              0: mlxen0
          statistics:
              send_count: 464970
              recv_count: 464963
              drop_count: 4
          sent_stats:
              put: 340418
              get: 124552
              reply: 0
              ack: 0
              hello: 0
          received_stats:
              put: 340401
              get: 63529
              reply: 61023
              ack: 10
              hello: 0
          dropped_stats:
              put: 4
              get: 0
              reply: 0
              ack: 0
              hello: 0
          health stats:
              fatal_error: 0
              health value: 1000
              interrupts: 0
              dropped: 0
              aborted: 0
              no route: 0
              timeouts: 0
              error: 0
          tunables:
              peer_timeout: 180
              peer_credits: 8
              peer_buffer_credits: 0
              credits: 256
          lnd tunables:
              conns_per_peer: 3
          dev cpt: 0
          CPT: "[0,1,2,3,4]"
        - nid: 172.16.0.25@tcp
          status: up
          interfaces:
              0: mlxen1
          statistics:
              send_count: 464886
              recv_count: 464877
              drop_count: 3
          sent_stats:
              put: 340879
              get: 124007
              reply: 0
              ack: 0
              hello: 0
          received_stats:
              put: 340858
              get: 62013
              reply: 61994
              ack: 12
              hello: 0
          dropped_stats:
              put: 3
              get: 0
              reply: 0
              ack: 0
              hello: 0
          health stats:
              fatal_error: 0
              health value: 1000
              interrupts: 0
              dropped: 0
              aborted: 0
              no route: 0
              timeouts: 0
              error: 0
          tunables:
              peer_timeout: 180
              peer_credits: 8
              peer_buffer_credits: 0
              credits: 256
          lnd tunables:
              conns_per_peer: 3
          dev cpt: 0
          CPT: "[0,1,2,3,4]"
